fix flickering arc diagram tooltip

--- a/movie_all/style.css
+++ b/movie_all/style.css
@@ -557,7 +557,9 @@ stroke-opacity: 0.4;
   padding: 10px 5px;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  pointer-events: none !important;
 }
+
 .movie-meta {
   font-family: komu-b, sans-serif;
   font-size: 18px;
